--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,6 @@
     android:layout_height="match_parent"
     android:padding="8dp"
     android:id="@+id/main_rv"
-    tools:context=".MainActivity">
+    tools:context=".views.MainActivity">
 
 </androidx.recyclerview.widget.RecyclerView>
