--- a/app/src/main/res/layout/single_gift.xml
+++ b/app/src/main/res/layout/single_gift.xml
@@ -21,7 +21,7 @@
             android:layout_weight="1"
             app:srcCompat="@android:drawable/ic_menu_today"
             android:contentDescription="@string/gift_image_description" />
-
+        <!-- TODO: Should probably be an editText -->
         <TextView
             android:id="@+id/gift_qty"
             android:layout_width="wrap_content"
