--- a/app/src/main/res/layout/single_recipient.xml
+++ b/app/src/main/res/layout/single_recipient.xml
@@ -4,24 +4,24 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="8dp"
-    android:id="@+id/single_giftee_card">
+    android:id="@+id/single_recipient_card">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:padding="16dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     <ImageView
-        android:id="@+id/giftee_img"
+        android:id="@+id/recipient_img"
         style="@style/image_style_40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:src="@drawable/ic_launcher_foreground"
-        android:contentDescription="@string/picture_of_giftee" />
+        android:contentDescription="@string/picture_of_recipient" />
     <TextView
-        android:id="@+id/giftee_name"
+        android:id="@+id/recipient_name"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:text="@string/firstnamelastname"
-        app:layout_constraintStart_toEndOf="@id/giftee_img"
+        android:text="@string/firstname_lastname"
+        app:layout_constraintStart_toEndOf="@id/recipient_img"
         android:layout_margin="8dp"
         android:padding="2dp"
         android:textSize="30sp"
