--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="giftivus_green">#FF005500</color>
+    <color name="giftivus_red">#FFAA0000</color>
     <color name="light_gray">#FFAAAAAA</color>
+    <color name="dark_gray">#FF333333</color>
 </resources>
